PromptService ok